samples/_failures_safe/1761407572_e01df4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed485af9.c: In function ‘main’:
./samples/SAFE/__tmp_ed485af9.c:151:13: error: expected expression at end of input
  151 |             case
      |             ^~~~
./samples/SAFE/__tmp_ed485af9.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed485af9.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed485af9.c:151:13: error: expected declaration or statement at end of input
